// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DraftCritiquePrompt golden > leaves optional blocks out for the generic variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 비평하는 도우미다.
다음 세 관점만 검토한다: 캐릭터 보이스(voice), 장면 목적 달성(purpose), 불필요한 반복(repetition).
[문체 제약]·[시점]·[서술자 목소리]·[장르·톤]·[관계 단계]를 위반한 서술·대사는 voice로, [품질 기준] 미달은 purpose로 보고한다.
[시점]에 목격 범위가 적혀 있으면, 시점 인물이 보거나 듣지 못한 사건과 다른 인물의 속마음을 단정한 서술을 시점 이탈로 보고하라.
[서술자 목소리]가 있으면 서술 문장이 그 목소리를 벗어난 대목을 보고하라. 인물 대사는 이 기준이 아니라 [캐릭터 카드]로 판단한다.
[캐릭터 카드]의 말투·보이스는 캐릭터 판단의 최우선 기준이다. [품질 기준]과 충돌하면 캐릭터 카드를 따르고, 그 충돌을 본문 문제로 보고하지 마라.
문법·맞춤법은 보지 않는다. 명백한 문제만 보고하고, 사소하면 severity를 low로 둔다.
설명 없이 JSON 배열만 출력하라.
[{"category":"voice","severity":"high","excerpt":"","comment":""}]
category는 voice|purpose|repetition, severity는 high|low. comment에는 무엇을 어떻게 고칠지 적어라.
문제가 없으면 빈 배열 []을 출력하라.",
  "user": "[본문]
본문만.",
}
`;

exports[`DraftCritiquePrompt golden > leaves optional blocks out for the rich variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 비평하는 도우미다.
다음 세 관점만 검토한다: 캐릭터 보이스(voice), 장면 목적 달성(purpose), 불필요한 반복(repetition).
[문체 제약]·[시점]·[서술자 목소리]·[장르·톤]·[관계 단계]를 위반한 서술·대사는 voice로, [품질 기준] 미달은 purpose로 보고한다.
[시점]에 목격 범위가 적혀 있으면, 시점 인물이 보거나 듣지 못한 사건과 다른 인물의 속마음을 단정한 서술을 시점 이탈로 보고하라.
[서술자 목소리]가 있으면 서술 문장이 그 목소리를 벗어난 대목을 보고하라. 인물 대사는 이 기준이 아니라 [캐릭터 카드]로 판단한다.
[캐릭터 카드]의 말투·보이스는 캐릭터 판단의 최우선 기준이다. [품질 기준]과 충돌하면 캐릭터 카드를 따르고, 그 충돌을 본문 문제로 보고하지 마라.
문법·맞춤법은 보지 않는다. 명백한 문제만 보고하고, 사소하면 severity를 low로 둔다.
설명 없이 JSON 배열만 출력하라.
[{"category":"voice","severity":"high","excerpt":"","comment":""}]
category는 voice|purpose|repetition, severity는 high|low. comment에는 무엇을 어떻게 고칠지 적어라.
문제가 없으면 빈 배열 []을 출력하라.",
  "user": "[본문]
본문만.",
}
`;

exports[`DraftCritiquePrompt golden > leaves optional blocks out for the xs variant 1`] = `
{
  "system": "초안의 voice/purpose/repetition 문제만 JSON 배열로 반환하라. 캐릭터 보이스는 [캐릭터 카드]를 최우선으로 따른다: [{"category":"voice","severity":"high","excerpt":"","comment":""}] (없으면 []).",
  "user": "[본문]
본문만.",
}
`;

exports[`DraftCritiquePrompt golden > renders a narration without a voice 1`] = `
{
  "system": "한국어 장편 소설 초안을 비평하는 도우미다.
다음 세 관점만 검토한다: 캐릭터 보이스(voice), 장면 목적 달성(purpose), 불필요한 반복(repetition).
[문체 제약]·[시점]·[서술자 목소리]·[장르·톤]·[관계 단계]를 위반한 서술·대사는 voice로, [품질 기준] 미달은 purpose로 보고한다.
[시점]에 목격 범위가 적혀 있으면, 시점 인물이 보거나 듣지 못한 사건과 다른 인물의 속마음을 단정한 서술을 시점 이탈로 보고하라.
[서술자 목소리]가 있으면 서술 문장이 그 목소리를 벗어난 대목을 보고하라. 인물 대사는 이 기준이 아니라 [캐릭터 카드]로 판단한다.
[캐릭터 카드]의 말투·보이스는 캐릭터 판단의 최우선 기준이다. [품질 기준]과 충돌하면 캐릭터 카드를 따르고, 그 충돌을 본문 문제로 보고하지 마라.
문법·맞춤법은 보지 않는다. 명백한 문제만 보고하고, 사소하면 severity를 low로 둔다.
설명 없이 JSON 배열만 출력하라.
[{"category":"voice","severity":"high","excerpt":"","comment":""}]
category는 voice|purpose|repetition, severity는 high|low. comment에는 무엇을 어떻게 고칠지 적어라.
문제가 없으면 빈 배열 []을 출력하라.",
  "user": "[시점]
1인칭

[본문]
본문만.",
}
`;

exports[`DraftCritiquePrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 비평하는 도우미다.
다음 세 관점만 검토한다: 캐릭터 보이스(voice), 장면 목적 달성(purpose), 불필요한 반복(repetition).
[문체 제약]·[시점]·[서술자 목소리]·[장르·톤]·[관계 단계]를 위반한 서술·대사는 voice로, [품질 기준] 미달은 purpose로 보고한다.
[시점]에 목격 범위가 적혀 있으면, 시점 인물이 보거나 듣지 못한 사건과 다른 인물의 속마음을 단정한 서술을 시점 이탈로 보고하라.
[서술자 목소리]가 있으면 서술 문장이 그 목소리를 벗어난 대목을 보고하라. 인물 대사는 이 기준이 아니라 [캐릭터 카드]로 판단한다.
[캐릭터 카드]의 말투·보이스는 캐릭터 판단의 최우선 기준이다. [품질 기준]과 충돌하면 캐릭터 카드를 따르고, 그 충돌을 본문 문제로 보고하지 마라.
문법·맞춤법은 보지 않는다. 명백한 문제만 보고하고, 사소하면 severity를 low로 둔다.
설명 없이 JSON 배열만 출력하라.
[{"category":"voice","severity":"high","excerpt":"","comment":""}]
category는 voice|purpose|repetition, severity는 high|low. comment에는 무엇을 어떻게 고칠지 적어라.
문제가 없으면 빈 배열 []을 출력하라.
본문에는 \`<!-- scene: <stem> -->\` 주석이 장면마다 있다. 각 이슈의 "sceneStem"에 그 구간 직전 주석의 stem을 그대로 적어라.",
  "user": "[장면 의도]
 재회의 긴장 

[등장 인물]
엘리아, 준

[설정]
엘리아는 의사다
도시는 항구다

[문체 제약]
짧은 문장
현재형 금지

[시점]
3인칭 · 목격 범위 · 초점 엘리아 · 과거형

[서술자 목소리]
건조하다
냉소적이다

[장르·톤]
누아르

[관계 단계]
재회

[품질 기준]
갈등이 드러난다
감각 묘사가 있다

[캐릭터 카드]
[엘리아] 역할: main
말투: 존댓말

[준] 역할: side

[본문]
<!-- scene: 001 -->
엘리아가 등대 아래 섰다.",
}
`;

exports[`DraftCritiquePrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 비평하는 도우미다.
다음 세 관점만 검토한다: 캐릭터 보이스(voice), 장면 목적 달성(purpose), 불필요한 반복(repetition).
[문체 제약]·[시점]·[서술자 목소리]·[장르·톤]·[관계 단계]를 위반한 서술·대사는 voice로, [품질 기준] 미달은 purpose로 보고한다.
[시점]에 목격 범위가 적혀 있으면, 시점 인물이 보거나 듣지 못한 사건과 다른 인물의 속마음을 단정한 서술을 시점 이탈로 보고하라.
[서술자 목소리]가 있으면 서술 문장이 그 목소리를 벗어난 대목을 보고하라. 인물 대사는 이 기준이 아니라 [캐릭터 카드]로 판단한다.
[캐릭터 카드]의 말투·보이스는 캐릭터 판단의 최우선 기준이다. [품질 기준]과 충돌하면 캐릭터 카드를 따르고, 그 충돌을 본문 문제로 보고하지 마라.
문법·맞춤법은 보지 않는다. 명백한 문제만 보고하고, 사소하면 severity를 low로 둔다.
설명 없이 JSON 배열만 출력하라.
[{"category":"voice","severity":"high","excerpt":"","comment":""}]
category는 voice|purpose|repetition, severity는 high|low. comment에는 무엇을 어떻게 고칠지 적어라.
문제가 없으면 빈 배열 []을 출력하라.
본문에는 \`<!-- scene: <stem> -->\` 주석이 장면마다 있다. 각 이슈의 "sceneStem"에 그 구간 직전 주석의 stem을 그대로 적어라.",
  "user": "[장면 의도]
 재회의 긴장 

[등장 인물]
엘리아, 준

[설정]
엘리아는 의사다
도시는 항구다

[문체 제약]
짧은 문장
현재형 금지

[시점]
3인칭 · 목격 범위 · 초점 엘리아 · 과거형

[서술자 목소리]
건조하다
냉소적이다

[장르·톤]
누아르

[관계 단계]
재회

[품질 기준]
갈등이 드러난다
감각 묘사가 있다

[캐릭터 카드]
[엘리아] 역할: main
말투: 존댓말

[준] 역할: side

[본문]
<!-- scene: 001 -->
엘리아가 등대 아래 섰다.",
}
`;

exports[`DraftCritiquePrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "초안의 voice/purpose/repetition 문제만 JSON 배열로 반환하라. 캐릭터 보이스는 [캐릭터 카드]를 최우선으로 따른다: [{"category":"voice","severity":"high","excerpt":"","comment":""}] (없으면 []).
본문에는 \`<!-- scene: <stem> -->\` 주석이 장면마다 있다. 각 이슈의 "sceneStem"에 그 구간 직전 주석의 stem을 그대로 적어라.",
  "user": "[장면 의도]
 재회의 긴장 

[등장 인물]
엘리아, 준

[설정]
엘리아는 의사다
도시는 항구다

[문체 제약]
짧은 문장
현재형 금지

[시점]
3인칭 · 목격 범위 · 초점 엘리아 · 과거형

[서술자 목소리]
건조하다
냉소적이다

[장르·톤]
누아르

[관계 단계]
재회

[품질 기준]
갈등이 드러난다
감각 묘사가 있다

[캐릭터 카드]
[엘리아] 역할: main
말투: 존댓말

[준] 역할: side

[본문]
<!-- scene: 001 -->
엘리아가 등대 아래 섰다.",
}
`;

exports[`DraftCritiquePrompt golden > treats empty lists and an empty narration as missing for the generic variant 1`] = `
{
  "system": "한국어 장편 소설 초안을 비평하는 도우미다.
다음 세 관점만 검토한다: 캐릭터 보이스(voice), 장면 목적 달성(purpose), 불필요한 반복(repetition).
[문체 제약]·[시점]·[서술자 목소리]·[장르·톤]·[관계 단계]를 위반한 서술·대사는 voice로, [품질 기준] 미달은 purpose로 보고한다.
[시점]에 목격 범위가 적혀 있으면, 시점 인물이 보거나 듣지 못한 사건과 다른 인물의 속마음을 단정한 서술을 시점 이탈로 보고하라.
[서술자 목소리]가 있으면 서술 문장이 그 목소리를 벗어난 대목을 보고하라. 인물 대사는 이 기준이 아니라 [캐릭터 카드]로 판단한다.
[캐릭터 카드]의 말투·보이스는 캐릭터 판단의 최우선 기준이다. [품질 기준]과 충돌하면 캐릭터 카드를 따르고, 그 충돌을 본문 문제로 보고하지 마라.
문법·맞춤법은 보지 않는다. 명백한 문제만 보고하고, 사소하면 severity를 low로 둔다.
설명 없이 JSON 배열만 출력하라.
[{"category":"voice","severity":"high","excerpt":"","comment":""}]
category는 voice|purpose|repetition, severity는 high|low. comment에는 무엇을 어떻게 고칠지 적어라.
문제가 없으면 빈 배열 []을 출력하라.",
  "user": "[장면 의도]
의도

[시점]
지정 없음

[본문]
본문만.",
}
`;

exports[`DraftCritiquePrompt golden > treats empty lists and an empty narration as missing for the xs variant 1`] = `
{
  "system": "초안의 voice/purpose/repetition 문제만 JSON 배열로 반환하라. 캐릭터 보이스는 [캐릭터 카드]를 최우선으로 따른다: [{"category":"voice","severity":"high","excerpt":"","comment":""}] (없으면 []).",
  "user": "[장면 의도]
의도

[시점]
지정 없음

[본문]
본문만.",
}
`;
